# backend/src/user/controller/user.api.ts
@@ -1,0 +1,9 @@
+export class LoggedInUserResponse {
+  id: number;
+
+  login: string;
+
+  avatar_url: string;
+
+  installations: number[];
+}
