# backend/src/user/model/user.model.ts
@@ -1,0 +1,12 @@
+export class User {
+  id: number;
+  login: string;
+  avatarUrl: string;
+  installations: number[];
+}
+
+export class CreateUser {
+  id: number;
+  login: string;
+  avatarUrl: string;
+} // TODO need to include creation of installations at some point
